--- a/src/app/pages/admin/lecturers/lecturers.component.html
+++ b/src/app/pages/admin/lecturers/lecturers.component.html
@@ -4,7 +4,12 @@
   <mat-card-header class="card-header">
     <div class="header-content">
       <mat-icon class="header-icon">school</mat-icon>
-      <h1 class="card-title">All Lecturers</h1>
+      <!-- <h1 class="card-title">All Lecturers</h1> -->
+
+      <h1 class="card-title">
+  All Lecturers 
+  <span class="student-count">({{lectuersTotal}})</span>
+</h1>
       <span class="flex-spacer"></span>
       <!-- <button mat-raised-button color="primary" routerLink="/admin/add-student" class="add-course-btn">
         <mat-icon>add</mat-icon>
@@ -37,7 +42,7 @@
         </button>
       </mat-form-field>
       <div class="search-info" *ngIf="searchText">
-        <span>Found {{filteredLecturers.length}} of {{lecturers.length}} students</span>
+        <span>Found {{filteredLecturers.length}} of {{lecturers.length}} lecturers</span>
       </div>
     </div>
 
@@ -107,7 +112,7 @@
     <ng-template #emptyState>
       <div class="empty-state">
         <mat-icon class="empty-icon">{{ searchText ? 'search_off' : 'folder_off' }}</mat-icon>
-        <h3>{{ searchText ? 'No Students Found' : 'No Students Available' }}</h3>
+        <h3>{{ searchText ? 'No Lecturer Found' : 'No Lecturer Available' }}</h3>
         <p>{{ searchText ? 'Try adjusting your search criteria' : 'Get started by adding your first student' }}</p>
         <button *ngIf="!searchText" mat-raised-button color="primary" routerLink="/admin/add-student" class="empty-action-btn">
           <mat-icon>add</mat-icon>
