Commintting the Voilation Timer

--- a/src/app/pages/user/start/start.component.html
+++ b/src/app/pages/user/start/start.component.html
@@ -4,6 +4,8 @@
 
 <!-- {{totalTime() | json}} -->
 
+<!-- {{questions| json}} -->
+
 <div class="bootstrap-wrapper">
     <!-- Loading Spinner -->
     <div *ngIf="isLoading" class="loading-overlay">
